tests/compile_fail/derive_unknown_flag_attr.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad")]
#[allow(dead_code)]
enum UnknownFlagAttrFlag {
    #[flag(bogus = ["x"])]
    Bad,
}

fn main() {}
